# cpprestsdk-POC

./: CMakeLists.txt
src/: CMakeLists.txt  api.cpp  api.hpp  hid.hpp  main.cpp  pch.hpp
